--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="task2.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div class="container">
@@ -57,6 +57,6 @@
     <div class="loading">
       <div class="spinner-border text-warning"></div>
     </div>
-    <script src="task2.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
